# rust_useful_concepts_hands_on

./: Cargo.toml  README.md  hello.txt
my-macro-lib/: Cargo.toml
my-macro-lib/src/: lib.rs
src/: clapping.rs  closure_info.rs  main.rs  marco_usages.rs  opt_struct.rs  scale_info.rs  system_timing.rs  use_async_task.rs  use_of_strip_prefix.rs
src/traits_collections/: impl_trait.rs  measure.rs  mod.rs  new_samasya.rs  operator_overloading.rs  sample.rs  traits_with_dyn.rs  use_iterators.rs
