[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parity-scale-codec = "3.2.2"
parity-scale-codec-derive = "3.1.4"
bounded-vec = "0.7.1"
sp-std = "6.0.0"
clap = { version = "4.1.6", features = ["derive"] }
structopt = "0.3"
strum = { version = "0.24.1", features = ["derive"] }
strum_macros = "0.24.3"